--- a/getGMMs/getGMMs.vcxproj
+++ b/getGMMs/getGMMs.vcxproj
@@ -39,7 +39,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>G:\computeMBH_FV;D:\opencv\build\include\opencv;D:\opencv;D:\opencv\build\include;$(IncludePath)</IncludePath>
+    <IncludePath>c:\computeMBH_FV;G:\computeMBH_FV;D:\opencv\build\include\opencv;D:\opencv;D:\opencv\build\include;$(IncludePath)</IncludePath>
     <LibraryPath>D:\opencv\build\x86\vc11\lib;D:\opencv\vl\bulid\win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
